[package]
name = "rwr-server-ping"
version = "0.1.6"
description = "Quick query server status by rwr official url"
authors = ["Kreedzt"]
license = "GPLv3"
repository = "https://github.com/Kreedzt/rwr-server-ping"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
tauri = { version = "1.2", features = ["clipboard-all", "dialog-all", "fs-all", "http-all", "path-all", "shell-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
